--- a/client/src/assets/Home.css
+++ b/client/src/assets/Home.css
@@ -31,6 +31,12 @@
     width: 150px;
 }
 
+.loggedUserName {
+    font-size: 30px;
+    margin-left: -8%;
+    margin-top: 5%;
+}
+
 .loginButton:hover {
     background-color: #333333;
     color: white;
@@ -82,8 +88,10 @@ h1 {
 }
 
 h2 {
-    font-size: 40px;
-    padding-left: 2%;
+    font-size: 30px;
+    margin-left: 8%;
+    margin-top: 5%;
+    width: fit-content;
 }
 
 p {
