--- a/client/src/assets/Teams.css
+++ b/client/src/assets/Teams.css
@@ -113,7 +113,7 @@ p {
     margin-bottom: 0;
 }
 
-.addMemberButton {
+.teamMembersButton {
     background-color: #e6e6e6;
     border-radius: 50px;
     border-color: #333333;
@@ -123,13 +123,13 @@ p {
     width: 150px;
 }
 
-.addMemberButton:hover {
+.teamMembersButton:hover {
     background-color: #333333;
     color: #e6e6e6;
     transition: all .2s ease;
 }
 
-.addMemberButton:active {
+.teamMembersButton:active {
     background-color:  #e6e6e6;
     color:#333333;
     transition: all .2s ease;
