--- a/client/src/index.css
+++ b/client/src/index.css
@@ -50,6 +50,9 @@ Global Styles
 ===============
 */
 
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap');
+
+
 *,
 ::after,
 ::before {
@@ -58,10 +61,11 @@ Global Styles
   box-sizing: border-box;
 }
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+  font-family: -apple-system, 'Comfortaa', cursive, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background: var(--clr-white);
-  color: var(--clr-grey-1);
+  //color: var(--clr-grey-1);
+  color: #333333;
   line-height: 1.5;
   font-size: 0.875rem;
 }
