added navigation through Breadcrumb, added list of tasks and projects on frontend

--- a/client/src/assets/Teams.css
+++ b/client/src/assets/Teams.css
@@ -51,6 +51,11 @@ h5{
     padding: 20px;
 }
 
+.team:hover{
+    background-color: lightgray;
+    cursor: pointer;
+}
+
 .teamsTitle {
     width: 720px;
 }
