--- a/client/src/assets/Home.css
+++ b/client/src/assets/Home.css
@@ -87,9 +87,22 @@ h1 {
 
 .loggedUserNameHome {
     font-size: 30px;
+    margin-left: 5%;
+    margin-top: 8%;
+    max-width:300px;
+    text-align: center;
+    display:inline-block;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+.notloggedUserNameHome {
+    font-size: 30px;
     margin-left: 10%;
     margin-top: 8%;
 }
+
 
 p {
     font-size: 20px;
