--- a/client/src/assets/Teams.css
+++ b/client/src/assets/Teams.css
@@ -38,6 +38,7 @@ h5{
     margin-top:6%;
 }
 .listofteamsTeams {
+    width: 770px;
     max-width: 770px;
     max-height: 450px;
     margin-top: 5%;
